[package]
name = "gcm_verification"
version = "0.1.0"
authors = ["Sebastian <asamk@gmx.de>"]
edition = "2021"

[dependencies]
anyhow = "1.0.65"
axum = "0.6"
bytes = "1"
env_logger = "0.10"
futures = "0.3"
http = "0.2"
hyper = "0.14"
hyper-rustls = "0.23.0"
quick-protobuf = "0.8"
rand = "0.8"
rustls = "0.20.7"
rustls-native-certs = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-util"] }
tokio-rustls = "0.23.4"
tower-http = { version = "0.3", features = ["cors"] }
